--- a/Sprawdz status/Sprawdz status.csproj
+++ b/Sprawdz status/Sprawdz status.csproj
@@ -79,5 +79,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Guciax\Graffiti.MST\Graffiti.MST\Graffiti.MST.csproj">
+      <Project>{c33f6b02-f8b4-4040-ae28-e30767d8a480}</Project>
+      <Name>Graffiti.MST</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Guciax\MST.MES\MST.MES\MST.MES.csproj">
+      <Project>{3a75370e-11b7-4582-a6af-73caf3a9e997}</Project>
+      <Name>MST.MES</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
